Project cleanup - linter